[package]
name = "hello-composition-rs"
version = "0.1.0"
authors = ["Joshua Ols <joshua.d.ols@gmail.com>"]
rust-version = "1.56"
edition = "2021"

[dependencies]
winit = "0.26.1"
raw-window-handle = "0.4.3"
rand = "0.8.5"

[dependencies.windows]
# git = "https://github.com/microsoft/windows-rs"
version = "0.37.0"
features = [
    "alloc",
    "Foundation_Numerics",
    "System",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT_Composition",
]
