[package]
name = "hello-composition-rs"
version = "0.1.0"
authors = ["Joshua Ols <joshua.d.ols@gmail.com>"]
rust-version = "1.56"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
rand = "0.8.5"
raw-window-handle = "0.6.0"
winit = "0.29.10"

[dependencies.windows]
# git = "https://github.com/microsoft/windows-rs"
version = "0.54.0"
features = [
    "Foundation_Numerics",
    "System",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT_Composition",
]
