[package]
name = "hello-composition-rs"
version = "0.1.0"
authors = ["Joshua Ols <joshua.d.ols@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.96"
rand = "0.9.0"
raw-window-handle = "0.6.2"
winit = "0.30.9"

[dependencies.windows]
# git = "https://github.com/microsoft/windows-rs"
version = "0.54.0"
features = [
    "Foundation_Numerics",
    "System",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT_Composition",
]
